--- a/public/app.css
+++ b/public/app.css
@@ -14375,13 +14375,14 @@ h2.title {
 /* Roasted Coffee Section CSS Start */
 .ezdan-roasted-coffee-wrapper {
     
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     min-height: 1600px;
     margin-top: 150px;
   }
 .ezdan-coffee-content {
     padding-top: 150px;
+    width: 30%;
   }
 .ezdan-coffee-content h2 {
     font-size: 60px;
