--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -432,7 +432,7 @@
   
   .ezdan-roasted-coffee-wrapper {
     
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     min-height: 1600px;
     margin-top: 150px;
@@ -440,6 +440,7 @@
   
   .ezdan-coffee-content {
     padding-top: 150px;
+    width: 30%;
   }
   
   .ezdan-coffee-content h2 {
