--- a/public/app.css
+++ b/public/app.css
@@ -14375,7 +14375,7 @@ h2.title {
 /* Roasted Coffee Section CSS Start */
 .ezdan-roasted-coffee-wrapper {
     
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     min-height: 1600px;
     margin-top: 150px;
