--- a/src/assets/styles/05-utilities/style.css
+++ b/src/assets/styles/05-utilities/style.css
@@ -432,7 +432,7 @@
   
   .ezdan-roasted-coffee-wrapper {
     
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     min-height: 1600px;
     margin-top: 150px;
