--- a/src/views/components/BannerGreen.twig
+++ b/src/views/components/BannerGreen.twig
@@ -2,14 +2,14 @@
 
 
 <section id="Coffee-info">
-    {% for Bannergreencollectione in component.BannerGreenCollection %}
-    <div class="ezdan-coffee-info-wrapper green-arrived position-relative"  style="background-image:url('{{Bannergreencollectione.bannergreenimage}}') ">
+    {% for Bannergreencollectionee in component.bannergreencollection %}
+    <div class="ezdan-coffee-info-wrapper green-arrived position-relative"  style="background-image:url('{{Bannergreencollectionee.bannergreenimage}}') ">
     
       <div class="container">
         <div class="ezdan-coffee-content">
-          <h2>{{BannerOrangecollectione.BannerGreenString}}</h2>
+          <h2>{{Bannergreencollectionee.BannerGreenString}}</h2>
           
-          <h3> {{BannerOrangecollectione.bannergreenstring2}}</h3>
+          <h3> {{Bannergreencollectionee.bannergreenstring2}}</h3>
         </div>
       </div>
     </div>
