--- a/src/assets/styles/02-generic/common.scss
+++ b/src/assets/styles/02-generic/common.scss
@@ -71,6 +71,7 @@ input[type="number"] {
 .remove-item-btn:after {
   content: "\ea47";
   font-family: "sallaicons" !important;
+  color: #371a08 !important;
   // speak: never;
   font-style: normal;
   font-weight: normal;
