--- a/src/views/components/SquareBanner.twig
+++ b/src/views/components/SquareBanner.twig
@@ -4,7 +4,7 @@
         <div class="ezdan-contact-wrapper">
           <div class="container">
 
-            {% for Banner in component.squarebannercollection %}
+            {% for Bannersqu in component.squarebannercollection %}
 
             <div class="ezdan-contact-img">
               <img src="{{Bannersqu.SquareBannerimage}}" alt="contact-img" />
