--- a/public/app.css
+++ b/public/app.css
@@ -14218,13 +14218,13 @@ h2.title {
     min-height: 1050px;
   }
 .slide-1 {
-    background: url(../images/hero-slider-img1.png);
+   
   }
 .slide-2 {
-    background: url(../images/hero-slider-img2.png);
+    
   }
 .slide-3 {
-    background: url(../images/hero-slider-img3.png);
+    
   }
 .ezdan-slider-conent {
     padding-top: 300px;
@@ -14485,7 +14485,7 @@ h2.title {
   }
 .ezdan-product-card-img img {
     width: 100%;
-    max-height: 440px;
+    max-height: 325px;
     height: 100%;
   }
 .ezdan-product-card-content {
@@ -15303,7 +15303,6 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .-top-5{top:-1.25rem}
 .bottom-0{bottom:0px}
 .bottom-1{bottom:0.25rem}
-.bottom-2{bottom:0.5rem}
 .left-0{left:0px}
 .right-0{right:0px}
 .top-0{top:0px}
@@ -15319,7 +15318,6 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .z-50{z-index:50}
 .z-\[2\]{z-index:2}
 .col-span-2{grid-column:span 2 / span 2}
-.m-0{margin:0px}
 .m-8{margin:2rem}
 .m-auto{margin:auto}
 .-mx-6{margin-left:-1.5rem;margin-right:-1.5rem}
@@ -15429,10 +15427,8 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .min-w-0{min-width:0px}
 .min-w-full{min-width:100%}
 .max-w-3xl{max-width:48rem}
-.max-w-full{max-width:100%}
 .max-w-lg{max-width:32rem}
 .max-w-none{max-width:none}
-.max-w-sm{max-width:24rem}
 .max-w-xs{max-width:20rem}
 .flex-1{flex:1 1 0%}
 .flex-none{flex:none}
@@ -15455,7 +15451,6 @@ select{background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/
 .flex-col{flex-direction:column}
 .flex-wrap{flex-wrap:wrap}
 .items-start{align-items:flex-start}
-.items-end{align-items:flex-end}
 .items-center{align-items:center}
 .items-baseline{align-items:baseline}
 .items-stretch{align-items:stretch}
@@ -20769,6 +20764,7 @@ input[type=number] {
 }
 .remove-item-btn:after {
   font-family: "sallaicons" !important;
+  color: #371a08 !important;
 }
 .remove-item-btn:after {
   content: "\ea47";
@@ -37160,6 +37156,7 @@ svg {
 [dir="rtl"] .rtl\:ml-3{margin-left:0.75rem}
 [dir="rtl"] .rtl\:ml-4{margin-left:1rem}
 [dir="rtl"] .rtl\:ml-8{margin-left:2rem}
+[dir="rtl"] .rtl\:ml-\[unset\]{margin-left:0;margin-left:initial}
 [dir="rtl"] .rtl\:ml-auto{margin-left:auto}
 [dir="rtl"] .rtl\:mr-1{margin-right:0.25rem}
 [dir="rtl"] .rtl\:mr-2{margin-right:0.5rem}
@@ -37305,7 +37302,6 @@ svg {
 .lg\:grid-cols-8{grid-template-columns:repeat(8, minmax(0, 1fr))}
 .lg\:flex-row{flex-direction:row}
 .lg\:justify-between{justify-content:space-between}
-.lg\:gap-6{gap:1.5rem}
 .lg\:gap-8{gap:2rem}
 .lg\:space-x-8 > :not([hidden]) ~ :not([hidden]){--tw-space-x-reverse:0;margin-right:calc(2rem * 0);margin-right:calc(2rem * var(--tw-space-x-reverse));margin-left:calc(2rem * (1 - 0));margin-left:calc(2rem * (1 - var(--tw-space-x-reverse)));margin-left:calc(2rem * calc(1 - 0));margin-left:calc(2rem * calc(1 - var(--tw-space-x-reverse)))}
 .lg\:space-y-16 > :not([hidden]) ~ :not([hidden]){--tw-space-y-reverse:0;margin-top:calc(4rem * (1 - 0));margin-top:calc(4rem * (1 - var(--tw-space-y-reverse)));margin-top:calc(4rem * calc(1 - 0));margin-top:calc(4rem * calc(1 - var(--tw-space-y-reverse)));margin-bottom:calc(4rem * 0);margin-bottom:calc(4rem * var(--tw-space-y-reverse))}
@@ -37324,10 +37320,8 @@ svg {
 [dir="ltr"] .ltr\:lg\:mr-8{margin-right:2rem}
 [dir="ltr"] .ltr\:lg\:pl-10{padding-left:2.5rem}
 [dir="ltr"] .ltr\:lg\:pl-20{padding-left:5rem}
-[dir="ltr"] .ltr\:lg\:pr-20{padding-right:5rem}
 [dir="rtl"] .rtl\:lg\:ml-8{margin-left:2rem}
 [dir="rtl"] .rtl\:lg\:mr-8{margin-right:2rem}
-[dir="rtl"] .rtl\:lg\:pl-20{padding-left:5rem}
 [dir="rtl"] .rtl\:lg\:pr-10{padding-right:2.5rem}
 [dir="rtl"] .rtl\:lg\:pr-20{padding-right:5rem}}
 @media (min-width: 1280px){
