--- a/src/views/components/footer/footer.twig
+++ b/src/views/components/footer/footer.twig
@@ -1,65 +1,102 @@
-<footer class="store-footer">
-  <div aria-label="footer" class="store-footer__inner">
-    <div class="container grid grid-col-1 lg:grid-cols-6 gap-8 lg:gap-6">
-        <div class="lg:col-span-2 rtl:lg:pl-20 ltr:lg:pr-20">
-          <a href="{{ link('/') }}" class="flex items-center m-0">
-            <h3>{{store.name}}</h3>
-          </a>
-          {% if store.description %}
-            <p class="max-w-sm leading-6 mb-6">
-              {{ store.description|raw }}
-            </p>
-          {% endif %}
 
-          <div class="hidden lg:block">
-            {% component 'footer.social' %}
+
+
+
+
+
+<footer id="Footer">
+  <div class="ezdan-footer-wrapper">
+    <div class="container">
+      <div
+        class="ezdan-footer-contatiner d-md-flex justify-content-between align-items-end"
+      >
+        <div class="footer-menu">
+          
+          <ul class="ezdan-footer-nav">
+            <li><a href="#">  {% component 'footer.menu' %}  </a></li>
+            <li>
+             
+          </ul>
+          <div class="ezdan-footer-social">
+            <ul class="d-flex align-items-center">
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://141-27-27.preezdan.com/assets/images/instagram-icon.svg"
+                    alt="instagram-icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://141-27-27.preezdan.com/assets/images/twitter-icon.svg"
+                    alt="twitter-icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="https://141-27-27.preezdan.com/assets/images/youtube-icon.svg"
+                    alt="youtube-icon"
+                /></a>
+              </li>
+            </ul>
           </div>
-
-          {# vat #}
-          {% if store.settings.tax.number %}
-            <div class="flex rtl:space-x-reverse space-x-2 items-end">
-              {% if store.settings.tax.certificate %}
-                <a class="load-img-onclick" data-modal-id="modal-value-tax" href="#/" alt="{{ store.settings.tax.number }}">
-                  <img width="100%" height="100%" src="{{ 'images/s-empty.png' | asset }}" data-src="{{'images/tax.png' | cdn}}" class="lazy w-10 rounded-sm hover:opacity-80 transition-opacity" alt="value added tax">
-                </a>
-              {% endif %}
-              <div>
-                <p class="text-sm text-text-grey mb-1">{{ trans('common.elements.tax_number') }}</p>
-                <b class="text-sm">{{ store.settings.tax.number }}</b>
-              </div>
+        </div>
+        <div class="ezdan-footer-logo">
+          <a href="{{store.url}}"
+            ><img src="https://141-27-27.preezdan.com/assets/images/logo-coffee.svg" alt="logo-coffee"
+          /></a>
+        </div>
+        <div class="ezdan-footer-contact">
+          <h5>تواصل معنا</h5>
+          <div
+            class="ezdan-footer-contact-info d-flex align-items-center mt-4"
+          >
+            <div class="ezdan-fci-icon">
+              <a href="#"
+                ><img
+                  src="https://141-27-27.preezdan.com/assets/images/whatsapp-icon.svg"
+                  alt="whatsapp-icon"
+              /></a>
             </div>
-
-            {% if store.settings.tax.certificate %}
-              <salla-modal sub-title-first sub-title="{{ trans('common.elements.tax_number') }}" modal-title="{{ store.settings.tax.number }}" id="modal-value-tax">
-                <div class="flex justify-center max-w-full">
-                  <img class="w-full" loading="lazy" 
-                  src="{{ 'images/s-empty.png' | asset }}" 
-                  data-src="{{ store.settings.tax.certificate }}" 
-                  alt="{{ store.settings.tax.number }}"/>
-                </div>
-              </salla-modal>
-            {% endif %}
-          {% endif %}
-        </div>
-
-        {% component 'footer.menu' %}
-
-        <div>
-          {% component 'footer.contacts' %}
-
-          <div class="lg:hidden contact-social">
-            {% component 'footer.social' %}
+            <div class="ezdan-fci-social">
+              <h6>واتساب</h6>
+              <a href="tel:+966550091180">966550091180+</a>
+            </div>
+          </div>
+          <div class="ezdan-footer-contact-info d-flex align-items-center">
+            <div class="ezdan-fci-icon">
+              <a href="#"
+                ><img
+                  src="https://141-27-27.preezdan.com/assets/images/phone-alt-icon.svg"
+                  alt="phone-alt-icon"
+              /></a>
+            </div>
+            <div class="ezdan-fci-social">
+              <h6>جوال</h6>
+              <a href="tel:+966550091180">966550091180+</a>
+            </div>
+          </div>
+          <div class="ezdan-footer-contact-info d-flex align-items-center">
+            <div class="ezdan-fci-icon">
+              <a href="#"
+                ><img src="https://141-27-27.preezdan.com/assets/images/email-icon.svg" alt="email-icon"
+              /></a>
+            </div>
+            <div class="ezdan-fci-social">
+              <h6>ايميل</h6>
+              <a href="mailto:info@arriyadhroaster.com"
+                >info@arriyadhroaster.com</a
+              >
+            </div>
           </div>
         </div>
-
-        {% component 'footer.mobile-apps' %}
+      </div>
     </div>
   </div>
-
   <div class="md:flex items-center justify-between py-4 container text-center">
     <span class="text-sm copyright-text">{% hook copyright %}</span>
     {% component 'footer.payment-methods' %}
   </div>
-
-  <span class="hidden bottom-2 rtl:pl-24 ltr:pr-24 md:grid-cols-3"></span>
 </footer>
