--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -18,11 +18,82 @@
 
 
 
-
+{% if is_page('index') %}
 
 
 <nav id="Navigation">
   <div class="ezdan-navigation-wrapper">
+    <div class="container">
+      <div
+        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
+      >
+        <div class="ezdan-main-menu">
+          <ul class="d-flex d-xl-none align-items-center">
+            <li id="bar">
+              <i class="fa-solid fa-bars"></i>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+          <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+            <li class="d-xl-none" id="cross">
+              <i class="fa-solid fa-xmark"></i>
+            </li>
+            
+            <li><a href="#">{% component 'header.menu' %} </a></li>
+            
+           
+          </ul>
+        </div>
+        <div class="ezdan-logo">
+          <a class="" href="{{ store.url }}">
+            <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
+            {% if is_page('index') %}
+              <h1 class="sr-only">{{ store.name }}</h1>
+            {% else %}
+              <h2 class="sr-only">{{ store.name }}</h2>
+            {% endif %}
+        </a>
+        </div>
+        <div class="ezdan-left-menu">
+          <ul class="d-flex align-items-center">
+            <li class="d-none d-xl-block">
+             
+              <a href="#">الدورات التدريبية</a>
+            </li>
+            <li class="d-none d-xl-block">
+              <a href="#"><i class="sicon-search"></i></a>
+            </li>
+            <li>
+            
+                <salla-cart-summary class="ml-4 rtl:ml-[unset] rtl:mr-4" style="color: white;">
+                  <i slot="icon" style="color: aliceblue;" class="header-btn__icon icon sicon-cart2"></i>
+                </salla-cart-summary>
+
+
+            </li>
+            <li>
+              <a href="#"><i class="sicon-user">
+                
+              </i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+{% else %}
+  
+
+
+
+
+
+<nav id="Navigation">
+  <div class="ezdan-navigation-wrapper ezdan-product-nav">
     <div class="container">
       <div
         class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
@@ -47,7 +118,7 @@
         </div>
         <div class="ezdan-logo">
           <a class="" href="{{ store.url }}">
-            <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
+            <img  loading="eager" src="https://141-27-27.preezdan.com/assets/images/logo-coffee.svg" alt="{{ store.name }} logo">
             {% if is_page('index') %}
               <h1 class="sr-only">{{ store.name }}</h1>
             {% else %}
@@ -58,13 +129,20 @@
         <div class="ezdan-left-menu">
           <ul class="d-flex align-items-center">
             <li class="d-none d-xl-block">
-              <a href="#">الدورات التدريبية</a>
+             
+              <a href="https://arriyadhroaster.com/%D8%A7%D9%84%D8%AF%D9%88%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%D9%8A%D8%A9/c137650432">الدورات التدريبية</a>
             </li>
             <li class="d-none d-xl-block">
               <a href="#"><i class="sicon-search"></i></a>
             </li>
             <li>
-              <a href="#"><i class="sicon-cart2"></i></a>
+              <a href="#"><i class="sicon-cart2"></i>
+                <salla-cart-summary class="ml-4 rtl:ml-[unset] rtl:mr-4">
+                  <i slot="icon" class="header-btn__icon icon sicon-shopping-bag"></i>
+                </salla-cart-summary>
+                
+             
+              </a>
             </li>
             <li>
               <a href="#"><i class="sicon-user"></i></a>
@@ -75,3 +153,5 @@
     </div>
   </div>
 </nav>
+
+{% endif %}
