--- a/public/app.css
+++ b/public/app.css
@@ -37193,6 +37193,7 @@ svg {
 .sm\:block{display:block}
 .sm\:inline-flex{display:inline-flex}
 .sm\:grid{display:grid}
+.sm\:hidden{display:none}
 .sm\:h-auto{height:auto}
 .sm\:h-full{height:100%}
 .sm\:\!w-\[220px\]{width:220px !important}
