--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -142,7 +142,7 @@
         <div class="ezdan-left-menu">
           <ul class="d-flex align-items-center">
             <li class="d-none d-xl-block">
-             
+             {{page.title}}
               <a href="https://arriyadhroaster.com/%D8%A7%D9%84%D8%AF%D9%88%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%D9%8A%D8%A9/c137650432">الدورات التدريبية</a>
             </li>
             <li class="d-none d-xl-block">
