--- a/public/app.css
+++ b/public/app.css
@@ -14476,6 +14476,10 @@ h2.title {
     font-weight: 600;
     color: #371a08;
   }
+.s-cart-summary-total
+{
+  display: none !important;
+}
 .ezdan-product-content h3 {
     font-size: 40px;
     font-weight: 400;
