--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -29,7 +29,7 @@
                 <button class="btn--close-sm close-filters sicon-cancel hidden"></button>
                 <salla-filters class="md:w-72 lg:sticky lg:top-20 flex-none" id="filters-menu"></salla-filters>
             {% endif %}
-
+         
             <div class="main-content flex-1 w-full {{ filters_is_active ? 'ltr:lg:ml-8 rtl:lg:mr-8' : '' }}">
                 <div class="mb-4 sm:mb-6 flex justify-between items-center">
                     <h1 class="font-bold text-xl rtl:pl-3 ltr:pr-3" id="page-main-title">{{ page.title|raw }}</h1>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-
+    {{page.title}}
 
     {% if store.settings.category.testimonial_enabled %}
         {% component 'home.testimonials' %}
