--- a/src/views/components/SectionItem.twig
+++ b/src/views/components/SectionItem.twig
@@ -1,26 +1,5 @@
 
 
-<div>
 
 
-    {% for compo in  component.sectionitemcollection %}
-        
-   
-    {% if page.title == compo.SectionItemslug  %}
-    <h1>Hi</h1>
-     
-    {% else %}
-     
-
-
-
-
-
-    {% endif %}
-
-    {% endfor %}
-
-</div>
-
-
-salla.api.request('component/list', {params:{paths:['home.main-links']}}).then((res) => {}
+<h1>test</h1>
