--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -16,8 +16,15 @@
 | sort_options[].is_selected | bool        | Is current page sorted by it                                         |
 | search_query               | ?string     |                                                                      |
 #}
+
+
+
+
 {% extends "layouts.master" %}
+
 {% block content %}
+
+
     {% set filters_is_active = filters and products|length %}
     <div class="container px-2.5 ms:px-5 mb-10">
         {# add breadcumbs container in pages to make a space in case breadcrumbs is off #}
@@ -70,7 +77,8 @@
 
 
 
-
+ 
+    {% component 'product.ammar' %}
 
     {% if store.settings.category.testimonial_enabled %}
         {% component 'home.testimonials' %}
