--- a/src/views/components/BannerGreen.twig
+++ b/src/views/components/BannerGreen.twig
@@ -7,7 +7,7 @@
     
       <div class="container">
         <div class="ezdan-coffee-content">
-          <h2>{{Bannergreencollectionee.BannerGreenString}}</h2>
+          <h2>{{Bannergreencollectionee.bannergreenstring}}</h2>
           
           <h3> {{Bannergreencollectionee.bannergreenstring2}}</h3>
         </div>
