--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -80,10 +80,15 @@
         </div>
     </div>
 
+{{page.title  }}
 
 
- 
-    
+<img
+    src="{{ category.image }}"
+   
+  /></a>
+
+
 
     {% if store.settings.category.testimonial_enabled %}
         {% component 'home.testimonials' %}
