--- a/src/views/components/home/sectionText.twig
+++ b/src/views/components/home/sectionText.twig
@@ -1,1 +1,4 @@
-<h1>Test</h1>
+
+
+{% for sectiontestonsectiospages in component.sectiontestonsectiospages %}
+<h1>{{sectiontestonsectiospages.stringsectiontestonsectiospages}} </h1>
