--- a/src/views/components/home/sectionText.twig
+++ b/src/views/components/home/sectionText.twig
@@ -2,3 +2,7 @@
 
 {% for sectiontestonsectiospages in component.sectiontestonsectiospages %}
 <h1>{{sectiontestonsectiospages.stringsectiontestonsectiospages}} </h1>
+
+{% endfor %}
+
+    
