--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -79,8 +79,13 @@
         </div>
     </div>
 
-   
-   
+
+    <script>
+    
+  await  salla.api.request('component/list', {params: {paths:['home.main-links']}}).then((res) => {})
+</script>
+
+
 
     {% if store.settings.category.testimonial_enabled %}
         {% component 'home.testimonials' %}
@@ -89,8 +94,8 @@
 
 {% block scripts %}
     <script defer src="{{ 'product.js' | asset }}"></script>
-    <script> salla.api.request('component/list', {params: {paths:['home.sectionText']}}).then((res) => {}) </script>
    
+     
 {% endblock %}
 
 
