--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -80,10 +80,15 @@
     </div>
 
 
-    <script>
-    
-  await  salla.api.request('component/list', {params: {paths:['home.main-links']}}).then((res) => {})
-</script>
+
+    <div id = "catblock"> 
+
+        console.log('Title:', title);
+
+        </div>
+
+
+
 
 
 
