--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -80,9 +80,13 @@
     </div>
 
 
+    <div id="output"></div>
 
-    <div id="output"> </div>
-
+    <!-- Display the content of outputDiv1 in HTML -->
+    <div id="outputDiv1Content"></div>
+    
+    <!-- Display the content of outputDiv2 in HTML -->
+    <div id="outputDiv2Content"></div>
         
 
 
