--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -25,7 +25,8 @@
 {% block content %}
 
 
-
+<div id="outputStringezdan" style="color: aqua;"></div>
+<div id="outputString"></div>
 
     {% set filters_is_active = filters and products|length %}
     <div class="container px-2.5 ms:px-5 mb-10">
