--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -18,6 +18,8 @@
 
 
 
+
+
 {% if is_page('index') %}
 
 
@@ -98,12 +100,95 @@
   </div>
 </nav>
 
+
+
+
+
+{% elseif is_page('product.index') %}
+
+
+<nav id="Navigation">
+  <div class="ezdan-navigation-wrapper">
+    <div class="container">
+      <div
+        class="ezdan-navbar-wrapper d-flex justify-content-between align-items-center"
+      >
+        <div class="ezdan-main-menu">
+          <ul class="d-flex d-xl-none align-items-center">
+            <li id="bar">
+              <i class="fa-solid fa-bars"></i>
+            </li>
+            <li>
+              <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+          <ul class="ezdan-main-nav d-xl-flex align-items-xl-center">
+            <li class="d-xl-none" id="cross">
+              <i class="fa-solid fa-xmark"></i>
+            </li>
+            
+            <li><a href="#">{% component 'header.menu' %} </a></li>
+            
+           
+          </ul>
+        </div>
+        <div class="ezdan-logo">
+          <a class="" href="{{ store.url }}">
+            <img  loading="eager" src="{{ store.logo }}" alt="{{ store.name }} logo">
+            {% if is_page('index') %}
+              <h1 class="sr-only">{{ store.name }}</h1>
+            {% else %}
+              <h2 class="sr-only">{{ store.name }}</h2>
+            {% endif %}
+        </a>
+        </div>
+        <div class="ezdan-left-menu">
+          <ul class="d-flex align-items-center">
+            
+            <li class="d-none d-xl-block">
+             
+              <a href="#">الدورات التدريبية</a>
+            </li>
+            <li class="d-none d-xl-block">
+              <button style="color: white;" onclick="salla.event.dispatch('search::open')" class="search-btn">
+                <span class="sicon-search"></span>
+                <span class="sm:hidden px-2 opacity-50">{{ trans('blocks.header.searchProducts') }}</span>
+              </button>
+
+          
+            </li>
+            <li class="d-none d-xl-block">
+            
+                <salla-cart-summary class="ml-4 rtl:ml-[unset] rtl:mr-4" style="color: white;">
+                  <i slot="icon" style="color: aliceblue;" class="header-btn__icon icon sicon-cart2"></i>
+                </salla-cart-summary>
+
+
+            </li>
+            <li class="d-none d-xl-block">
+             
+                {% if user.type=='user' %}
+                <salla-user-menu avatar-only show-header></salla-user-menu>
+              {% else %}
+                  <button class="header-btn" onclick="salla.event.dispatch('login::open')">
+                    <i style="color: white;" class="header-btn__icon sicon-user"></i>
+                  </button>
+              {% endif %}
+                
+              </i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
+
+
 {% else %}
   
 
-
-
-
+  
 
 <nav id="Navigation">
   <div class="ezdan-navigation-wrapper ezdan-product-nav">
@@ -168,3 +253,4 @@
 </nav>
 
 {% endif %}
+
