--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -25,8 +25,19 @@
 {% block content %}
 
 
-<div id="outputStringezdan" style="color: aqua;"></div>
-<div id="outputString"></div>
+
+<section id="Product-details">
+    <div id="outputImage" class="ezdan-product-details-hero-wrapper">
+        <div class="container">
+            <div class="ezdan-pdh-content">
+                <h1 id="outputStringezdan"></h1>
+                <h2 id="outputString"></h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
     {% set filters_is_active = filters and products|length %}
     <div class="container px-2.5 ms:px-5 mb-10">
