--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -25,9 +25,9 @@
 {% block content %}
 
 
-
 <section id="Product-details">
-    <div id="outputImage" class="ezdan-product-details-hero-wrapper">
+    <!-- Output divs for Stringezdan, String, and Image -->
+    <div id="outputImage">
         <div class="container">
             <div class="ezdan-pdh-content">
                 <h1 id="outputStringezdan"></h1>
@@ -36,8 +36,6 @@
         </div>
     </div>
 </section>
-
-
 
     {% set filters_is_active = filters and products|length %}
     <div class="container px-2.5 ms:px-5 mb-10">
