--- a/src/views/pages/product/index.twig
+++ b/src/views/pages/product/index.twig
@@ -32,10 +32,29 @@
             <div class="ezdan-pdh-content">
                 <h1 id="outputStringezdan"></h1>
                 <h2 id="outputString"></h2>
+                       
             </div>
         </div>
     </div>
 </section>
+
+
+
+
+<section id="Coffee">
+    <div class="ezdan-coffee-wrapper">
+      <div class="container">
+        <div class="ezdan-coffee-top">
+            <h3 id="outputTextWithIcon" class="ezdan-arrow-down-icon pt-md-5 mt-4"></h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
 
     {% set filters_is_active = filters and products|length %}
     <div class="container px-2.5 ms:px-5 mb-10">
@@ -90,6 +109,20 @@
             </div>
         </div>
     </div>
+
+
+
+    <section id="Product-details-content">
+        <div class="ezdan-pdc-wrapper">
+          <div class="container">
+            <div class="ezdan-product-details-content">
+              <h3 id = "outputEndText">
+
+            </h3>
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
