--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -178,6 +178,8 @@
                 </salla-slider>
             </div>
 
+       
+
             <div class="main-content md:sticky top-24 w-full md:w-2/4 md:pb-16">
 
                 {% hook 'product:single.description.start' %}
@@ -404,7 +406,7 @@
         <salla-products-slider source="related" source-value="{{product.id}}" block-title="{{trans('pages.products.similar_products')}}" display-all-url></salla-products-slider>
     </div>
 {% endblock %}
-
+<h2 id="outputString"></h2>
 {% block scripts %}
     <script defer src="{{ 'product.js' | asset }}"></script>
     {% if product.has_3d_image %}
