--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -402,12 +402,13 @@
     </div>
     
 
+    {{product.id}}
 
-
-    
-{{product.id}}
-
-
+    <div class="string1Item" id="string1Item1"></div>
+    <div class="string1Item" id="string1Item2"></div>
+    <div id="product-container" data-product-id="{{ product.id }}">
+        <!-- Your other HTML content for the product page -->
+    </div>
 
 
     {% component 'product.offer' %}
@@ -420,7 +421,9 @@
 {% endblock %}
 
 {% block scripts %}
-    <script defer src="{{ 'product.js' | asset }}"></script>
+    <script defer src="{{ 'product.js' | asset }}">
+        var productId = product.id;
+    </script>
     {% if product.has_3d_image %}
         <script type="module" defer src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     {% endif %}
