--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -402,13 +402,46 @@
     </div>
     
 
-    {{product.id}}
+    
 
-    <div class="string1Item" id="string1Item1"></div>
-    <div class="string1Item" id="string1Item2"></div>
     <div id="product-container" data-product-id="{{ product.id }}">
         <!-- Your other HTML content for the product page -->
     </div>
+    <div id="string1Display"></div>
+    <div id="aboutCoffeeIconDisplay"></div>
+
+   
+    <section id="About-coffee">
+        <div class="ezdan-about-coffee-wrapper">
+          <div class="container">
+            <div  class="ezdan-about-coffee-title">
+                <div id="string1Display"></div>
+            </div>
+          </div>
+  
+          </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     {% component 'product.offer' %}
