--- a/public/app.css
+++ b/public/app.css
@@ -14835,8 +14835,8 @@ h2.title {
     background: #352110;
   }
 .ezdan-about-coffee-card-icon img {
-    width: 50px;
-    min-height: 90px;
+    width: 41px !important;
+    min-height: 65px !important;
   }
 .w-35 {
     width: 35px;
