--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -401,26 +401,65 @@
         
     </div>
     
+   
+
 
     
-
     <div id="product-container" data-product-id="{{ product.id }}">
         <!-- Your other HTML content for the product page -->
     </div>
-    <div id="string1Display"></div>
-    <div id="aboutCoffeeIconDisplay"></div>
+ 
 
-   
-    <section id="About-coffee">
-        <div class="ezdan-about-coffee-wrapper">
-          <div class="container">
-            <div  class="ezdan-about-coffee-title">
-                <div id="string1Display"></div>
+
+
+<!-- Add a div to display the String_1 value -->
+
+
+<!-- Add a div to display the AboutCoffeeicon image -->
+
+
+
+
+
+<section id="About-coffee">
+    <div class="ezdan-about-coffee-wrapper">
+      <div class="container">
+        <div class="ezdan-about-coffee-title">
+          <h2 id="string1Display"  > </h2>
+        </div>
+        <div class="ezdan-about-coffee-container">
+          <div class="ezdan-about-coffee-card position-relative">
+            <div class="ezdan-about-coffee-card-icon">
+               
+                <div id="aboutCoffeeIconDisplay" style="display: inline-block;" ></div>
+
             </div>
-          </div>
-  
-          </div>
-    </section>
+            <div class="ezdan-about-coffee-card-content">
+              <h4 id="aboutCoffeeTitleDisplay" ></h4>
+              <p id="aboutCoffeeDisDisplay" ></p>
+            </div>
+      
+        </div>
+
+          
+
+
+
+
+
+
+
+
+
+        
+        
+      </div>
+    </div>
+    
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -441,10 +480,7 @@
 
 
 
-
-
-
-    {% component 'product.offer' %}
+   {% component 'product.offer' %}
     {% component 'comments' %}
     <div class="container">
         <salla-products-slider source="related" source-value="{{product.id}}" block-title="{{trans('pages.products.similar_products')}}" display-all-url></salla-products-slider>
