--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -412,36 +412,30 @@
 
 
 
-<!-- Add a div to display the String_1 value -->
-
-
-<!-- Add a div to display the AboutCoffeeicon image -->
 
 
 
 
-
-<section id="About-coffee">
-    <div class="ezdan-about-coffee-wrapper">
-      <div class="container">
-        <div class="ezdan-about-coffee-title">
-          <h2 id="string1Display"  > </h2>
-        </div>
-        <div class="ezdan-about-coffee-container">
-          <div class="ezdan-about-coffee-card position-relative">
-            <div class="ezdan-about-coffee-card-icon">
-               
-                <div id="aboutCoffeeIconDisplay" style="display: inline-block;" ></div>
-
+    <section id="About-coffee">
+        <div class="ezdan-about-coffee-wrapper">
+          <div class="container">
+            <div class="ezdan-about-coffee-title">
+              <h2 id="string1Display"> </h2>
             </div>
-            <div class="ezdan-about-coffee-card-content">
-              <h4 id="aboutCoffeeTitleDisplay" ></h4>
-              <p id="aboutCoffeeDisDisplay" ></p>
+            <div class="ezdan-about-coffee-container">
+              <div class="ezdan-about-coffee-card position-relative">
+                <div class="ezdan-about-coffee-card-icon">
+                    <div id="aboutCoffeeIconDisplay" style="display: inline-block;"></div>
+                </div>
+                <div class="ezdan-about-coffee-card-content">
+                  <h4 id="aboutCoffeeTitleDisplay"> </h4>
+                  <p id="aboutCoffeeDisDisplay"> </p>
+                </div>
+              </div>
             </div>
-      
+          </div>
         </div>
-
-          
+    </section>
 
 
 
