--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -413,50 +413,73 @@
 
 
 
+ 
 
 
 
-    <section id="About-coffee">
+<section id="About-coffee">
         <div class="ezdan-about-coffee-wrapper">
           <div class="container">
             <div class="ezdan-about-coffee-title">
-              <h2 id="string1Display"> </h2>
+              <h2 id="string1Display" ></h2>
             </div>
             <div class="ezdan-about-coffee-container">
               <div class="ezdan-about-coffee-card position-relative">
                 <div class="ezdan-about-coffee-card-icon">
                     <div id="aboutCoffeeIconDisplay" style="display: inline-block;"></div>
+
                 </div>
                 <div class="ezdan-about-coffee-card-content">
-                  <h4 id="aboutCoffeeTitleDisplay"> </h4>
-                  <p id="aboutCoffeeDisDisplay"> </p>
+                  <h4 id="aboutCoffeeTitleDisplay" ></h4>
+                  <p id="aboutCoffeeDisDisplay" > </p>
+                </div>
+              </div>
+              <div class="ezdan-about-coffee-card position-relative">
+                <div class="ezdan-about-coffee-card-icon w-35">
+                    <div id="aboutCoffeeIconDisplay1" style="display: inline-block;"></div>
+                </div>
+                <div class="ezdan-about-coffee-card-content">
+                  <h4 id="aboutCoffeeTitleDisplay1" ></h4>
+                  <p id="aboutCoffeeDisDisplay1" ></p>
+                </div>
+              </div>
+              <div class="ezdan-about-coffee-card position-relative">
+                <div class="ezdan-about-coffee-card-icon">
+                  <img src="assets/images/sun-icon.svg" alt="sun-icon" />
+                </div>
+                <div class="ezdan-about-coffee-card-content">
+                  <h4 >طريقة المعالجة</h4>
+                  <p>بالغسل</p>
+                </div>
+              </div>
+              <div class="ezdan-about-coffee-card position-relative">
+                <div class="ezdan-about-coffee-card-icon">
+                  <img
+                    src="assets/images/coffee-mug-icon.svg"
+                    alt="coffee-mug-icon"
+                  />
+                </div>
+                <div class="ezdan-about-coffee-card-content">
+                  <h4>التحميص</h4>
+                  <p>متوسط</p>
+                </div>
+              </div>
+              <div class="ezdan-about-coffee-card position-relative">
+                <div class="ezdan-about-coffee-card-icon w-35">
+                  <img
+                    src="assets/images/roasting-icon.svg"
+                    alt="roasting-icon"
+                  />
+                </div>
+                <div class="ezdan-about-coffee-card-content">
+                  <h4>التحميص</h4>
+                  <p>متوسط</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-    </section>
-
-
-
-
-
-
-
-
-
-        
-        
-      </div>
-    </div>
-    
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-
+      </section>
 
 
 
