--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -445,23 +445,20 @@
               </div>
               <div class="ezdan-about-coffee-card position-relative">
                 <div class="ezdan-about-coffee-card-icon">
-                  <img src="assets/images/sun-icon.svg" alt="sun-icon" />
+                    <div id="aboutCoffeeIconDisplay2" style="display: inline-block;"></div> 
                 </div>
                 <div class="ezdan-about-coffee-card-content">
-                  <h4 >طريقة المعالجة</h4>
-                  <p>بالغسل</p>
+                  <h4 id="aboutCoffeeTitleDisplay2" > </h4>
+                  <p id="aboutCoffeeDisDisplay2" ></p>
                 </div>
               </div>
               <div class="ezdan-about-coffee-card position-relative">
                 <div class="ezdan-about-coffee-card-icon">
-                  <img
-                    src="assets/images/coffee-mug-icon.svg"
-                    alt="coffee-mug-icon"
-                  />
+                    <div id="aboutCoffeeIconDisplay3" style="display: inline-block;"></div> 
                 </div>
                 <div class="ezdan-about-coffee-card-content">
-                  <h4>التحميص</h4>
-                  <p>متوسط</p>
+                    <h4 id="aboutCoffeeTitleDisplay3" > </h4>
+                    <p id="aboutCoffeeDisDisplay3" ></p>
                 </div>
               </div>
               <div class="ezdan-about-coffee-card position-relative">
