--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -463,14 +463,11 @@
               </div>
               <div class="ezdan-about-coffee-card position-relative">
                 <div class="ezdan-about-coffee-card-icon w-35">
-                  <img
-                    src="assets/images/roasting-icon.svg"
-                    alt="roasting-icon"
-                  />
+                    <div id="aboutCoffeeIconDisplay4" style="display: inline-block;"></div> 
                 </div>
                 <div class="ezdan-about-coffee-card-content">
-                  <h4>التحميص</h4>
-                  <p>متوسط</p>
+                    <h4 id="aboutCoffeeTitleDisplay4" > </h4>
+                    <p id="aboutCoffeeDisDisplay4" ></p>
                 </div>
               </div>
             </div>
