--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -481,6 +481,23 @@
 
 
 
+      <section id="Product-description">
+        <div class="ezdan-product-desc-wrapper">
+          <div class="container">
+            <div class="ezdan-product-desc-content">
+              <h2 id="itemDisBlockTitleDisplay" ></h2>
+              <h4 id="itemDisBlockDisplay" ></h4>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+
+
+
+
+
 
 
 
