--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -480,17 +480,39 @@
 
 
 
-
-      <section id="Product-description">
+      <section id="Product-description" style="display: none;">
         <div class="ezdan-product-desc-wrapper">
-          <div class="container">
-            <div class="ezdan-product-desc-content">
-              <h2 id="itemDisBlockTitleDisplay" ></h2>
-              <h4 id="itemDisBlockDisplay" ></h4>
+            <div class="container">
+                <div class="ezdan-product-desc-content">
+                    <!-- Display the itemDisBlockTitle text -->
+                    <h2 id="itemDisBlockTitleDisplay"></h2>
+
+                    <!-- Display the itemDisBlock text -->
+                    <h4 id="itemDisBlockDisplay"></h4>
+                </div>
             </div>
-          </div>
         </div>
-      </section>
+    </section>
+
+    <!-- Additional sections (replace "X" with appropriate numbers) -->
+    <section id="About-coffeeX" style="display: none;">
+        <div>
+            <div id="aboutCoffeeIconDisplayX"></div>
+            <div id="aboutCoffeeTitleDisplayX"></div>
+            <div id="aboutCoffeeDisDisplayX"></div>
+        </div>
+    </section>
+
+    <section id="Product-descriptionX" style="display: none;">
+        <div class="ezdan-product-desc-wrapper">
+            <div class="container">
+                <div class="ezdan-product-desc-content">
+                    <h2 id="itemDisBlockTitleDisplayX"></h2>
+                    <h4 id="itemDisBlockDisplayX"></h4>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
