--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -514,6 +514,74 @@
         </div>
     </section>
 
+  
+
+
+<section id="About-coffee">
+  <div class="ezdan-about-coffee-wrapper2">
+    <div class="container">
+      <div class="ezdan-about-coffee-title2">
+        <h2 id="prepearwayDisplay" ></h2>
+      </div>
+      <div class="ezdan-about-coffee-container2">
+        <div class="ezdan-about-coffee-card position-relative">
+          <div class="ezdan-about-coffee-card-icon">
+            <div id="prepearwayIconDisplay"></div>
+          </div>
+          <div class="ezdan-about-coffee-card-content">
+            <h4 id="prepearwayTitleDisplay" ></h4>
+            <p id="prepearwayDisinfoDisplay" ></p>
+          </div>
+        </div>
+        <div class="ezdan-about-coffee-card position-relative">
+          <div class="ezdan-about-coffee-card-icon w-35">
+            <img
+              src="assets/images/drop.svg"
+              alt="location-icon"
+            />
+          </div>
+          <div class="ezdan-about-coffee-card-content">
+            <h4>كمية الماء</h4>
+            <p>30 ml</p>
+          </div>
+        </div>
+        <div class="ezdan-about-coffee-card position-relative">
+          <div class="ezdan-about-coffee-card-icon">
+            <img src="assets/images/tempr.svg" alt="sun-icon" />
+          </div>
+          <div class="ezdan-about-coffee-card-content">
+            <h4>درجة حرارة الماء</h4>
+            <p>93 c</p>
+          </div>
+        </div>
+        <div class="ezdan-about-coffee-card position-relative">
+          <div class="ezdan-about-coffee-card-icon">
+            <img
+              src="assets/images/timeing.svg"
+              alt="coffee-mug-icon"
+            />
+          </div>
+          <div class="ezdan-about-coffee-card-content">
+            <h4>وقت الاستخلاص</h4>
+            <p>25-30 ثانية</p>
+          </div>
+        </div>
+        <div class="ezdan-about-coffee-card position-relative">
+          <div class="ezdan-about-coffee-card-icon.w-35">
+            <img
+              src="assets/images/gag.svg"
+              alt="roasting-icon"
+            />
+          </div>
+          <div class="ezdan-about-coffee-card-content">
+            <h4>درجة الطحن</h4>
+            <p>خشن</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
