--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -516,17 +516,16 @@
 
   
 
-
 <section id="About-coffee">
   <div class="ezdan-about-coffee-wrapper2">
     <div class="container">
       <div class="ezdan-about-coffee-title2">
-        <h2 id="prepearwayDisplay" ></h2>
+        <h2 id="prepearwayDisplay"></h2>
       </div>
       <div class="ezdan-about-coffee-container2">
         <div class="ezdan-about-coffee-card position-relative">
           <div class="ezdan-about-coffee-card-icon">
-            <div id="prepearwayIconDisplay"></div>
+            <div id="prepearwayIconDisplay" style="display: inline-block;"></div>
           </div>
           <div class="ezdan-about-coffee-card-content">
             <h4 id="prepearwayTitleDisplay" ></h4>
@@ -535,14 +534,11 @@
         </div>
         <div class="ezdan-about-coffee-card position-relative">
           <div class="ezdan-about-coffee-card-icon w-35">
-            <img
-              src="assets/images/drop.svg"
-              alt="location-icon"
-            />
+            <div id="prepearwayIconDisplay1" style="display: inline-block;"></div>
           </div>
           <div class="ezdan-about-coffee-card-content">
-            <h4>كمية الماء</h4>
-            <p>30 ml</p>
+            <h4 id="prepearwayTitleDisplay1"> </h4>
+            <p id="prepearwayDisinfoDisplay1" ></p>
           </div>
         </div>
         <div class="ezdan-about-coffee-card position-relative">
