--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -543,11 +543,11 @@
         </div>
         <div class="ezdan-about-coffee-card position-relative">
           <div class="ezdan-about-coffee-card-icon">
-            <img src="assets/images/tempr.svg" alt="sun-icon" />
+            <div id="prepearwayIconDisplay2" style="display: inline-block;"></div>
           </div>
           <div class="ezdan-about-coffee-card-content">
-            <h4>درجة حرارة الماء</h4>
-            <p>93 c</p>
+            <h4 id="prepearwayTitleDisplay2"> </h4>
+            <p id="prepearwayDisinfoDisplay2" ></p>
           </div>
         </div>
         <div class="ezdan-about-coffee-card position-relative">
