--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -514,6 +514,7 @@
         </div>
     </section>
 
+
   
 
 <section id="About-coffee">
@@ -552,14 +553,11 @@
         </div>
         <div class="ezdan-about-coffee-card position-relative">
           <div class="ezdan-about-coffee-card-icon">
-            <img
-              src="assets/images/timeing.svg"
-              alt="coffee-mug-icon"
-            />
+            <div id="prepearwayIconDisplay3" style="display: inline-block;"></div>
           </div>
           <div class="ezdan-about-coffee-card-content">
-            <h4>وقت الاستخلاص</h4>
-            <p>25-30 ثانية</p>
+            <h4 id="prepearwayTitleDisplay3"> </h4>
+            <p id="prepearwayDisinfoDisplay3" ></p>
           </div>
         </div>
         <div class="ezdan-about-coffee-card position-relative">
