--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -562,14 +562,11 @@
         </div>
         <div class="ezdan-about-coffee-card position-relative">
           <div class="ezdan-about-coffee-card-icon.w-35">
-            <img
-              src="assets/images/gag.svg"
-              alt="roasting-icon"
-            />
+            <div id="prepearwayIconDisplay4" style="display: inline-block;"></div>
           </div>
           <div class="ezdan-about-coffee-card-content">
-            <h4>درجة الطحن</h4>
-            <p>خشن</p>
+            <h4 id="prepearwayTitleDisplay4"> </h4>
+            <p id="prepearwayDisinfoDisplay4" ></p>
           </div>
         </div>
       </div>
