--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -578,9 +578,17 @@
 
 
 
-
-
-
+<section id="Product-description">
+  <div class="ezdan-product-desc-wrapper">
+    <div class="container">
+      <div class="ezdan-product-desc-content">
+        <h2 id="storyTitDisplay"></h2>
+        <h4 id="storyInfoDisplay">
+        </h4>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 
