--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -405,6 +405,180 @@
 
 
   
+  
+    <div id="product-container" data-product-id="{{ product.id }}">
+      <!-- Your other HTML content for the product page -->
+  </div>
+
+
+
+
+
+
+
+
+
+<section id="About-coffee">
+      <div class="ezdan-about-coffee-wrapper">
+        <div class="container">
+          <div class="ezdan-about-coffee-title">
+            <h2 id="string1Display" ></h2>
+          </div>
+          <div class="ezdan-about-coffee-container">
+            <div class="ezdan-about-coffee-card position-relative">
+              <div class="ezdan-about-coffee-card-icon">
+                  <div id="aboutCoffeeIconDisplay" style="display: inline-block;"></div>
+
+              </div>
+              <div class="ezdan-about-coffee-card-content">
+                <h4 id="aboutCoffeeTitleDisplay" ></h4>
+                <p id="aboutCoffeeDisDisplay" > </p>
+              </div>
+            </div>
+            <div class="ezdan-about-coffee-card position-relative">
+              <div class="ezdan-about-coffee-card-icon w-35">
+                  <div id="aboutCoffeeIconDisplay1" style="display: inline-block;"></div>
+              </div>
+              <div class="ezdan-about-coffee-card-content">
+                <h4 id="aboutCoffeeTitleDisplay1" ></h4>
+                <p id="aboutCoffeeDisDisplay1" ></p>
+              </div>
+            </div>
+            <div class="ezdan-about-coffee-card position-relative">
+              <div class="ezdan-about-coffee-card-icon">
+                  <div id="aboutCoffeeIconDisplay2" style="display: inline-block;"></div> 
+              </div>
+              <div class="ezdan-about-coffee-card-content">
+                <h4 id="aboutCoffeeTitleDisplay2" > </h4>
+                <p id="aboutCoffeeDisDisplay2" ></p>
+              </div>
+            </div>
+            <div class="ezdan-about-coffee-card position-relative">
+              <div class="ezdan-about-coffee-card-icon">
+                  <div id="aboutCoffeeIconDisplay3" style="display: inline-block;"></div> 
+              </div>
+              <div class="ezdan-about-coffee-card-content">
+                  <h4 id="aboutCoffeeTitleDisplay3" > </h4>
+                  <p id="aboutCoffeeDisDisplay3" ></p>
+              </div>
+            </div>
+            <div class="ezdan-about-coffee-card position-relative">
+              <div class="ezdan-about-coffee-card-icon w-35">
+                  <div id="aboutCoffeeIconDisplay4" style="display: inline-block;"></div> 
+              </div>
+              <div class="ezdan-about-coffee-card-content">
+                  <h4 id="aboutCoffeeTitleDisplay4" > </h4>
+                  <p id="aboutCoffeeDisDisplay4" ></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
+
+
+  <!-- Additional sections (replace "X" with appropriate numbers) -->
+  <section id="About-coffeeX" style="display: none;">
+      <div>
+          <div id="aboutCoffeeIconDisplayX"></div>
+          <div id="aboutCoffeeTitleDisplayX"></div>
+          <div id="aboutCoffeeDisDisplayX"></div>
+      </div>
+  </section>
+
+  <section id="Product-descriptionX" style="display: none;">
+      <div class="ezdan-product-desc-wrapper">
+          <div class="container">
+              <div class="ezdan-product-desc-content">
+                  <h2 id="itemDisBlockTitleDisplayX"></h2>
+                  <h4 id="itemDisBlockDisplayX"></h4>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
+
+
+<section id="About-coffee">
+<div class="ezdan-about-coffee-wrapper2">
+  <div class="container">
+    <div class="ezdan-about-coffee-title2">
+      <h2 id="prepearwayDisplay"></h2>
+    </div>
+    <div class="ezdan-about-coffee-container2">
+      <div class="ezdan-about-coffee-card position-relative">
+        <div class="ezdan-about-coffee-card-icon">
+          <div id="prepearwayIconDisplay" style="display: inline-block;"></div>
+        </div>
+        <div class="ezdan-about-coffee-card-content">
+          <h4 id="prepearwayTitleDisplay" ></h4>
+          <p id="prepearwayDisinfoDisplay" ></p>
+        </div>
+      </div>
+      <div class="ezdan-about-coffee-card position-relative">
+        <div class="ezdan-about-coffee-card-icon w-35">
+          <div id="prepearwayIconDisplay1" style="display: inline-block;"></div>
+        </div>
+        <div class="ezdan-about-coffee-card-content">
+          <h4 id="prepearwayTitleDisplay1"> </h4>
+          <p id="prepearwayDisinfoDisplay1" ></p>
+        </div>
+      </div>
+      <div class="ezdan-about-coffee-card position-relative">
+        <div class="ezdan-about-coffee-card-icon">
+          <div id="prepearwayIconDisplay2" style="display: inline-block;"></div>
+        </div>
+        <div class="ezdan-about-coffee-card-content">
+          <h4 id="prepearwayTitleDisplay2"> </h4>
+          <p id="prepearwayDisinfoDisplay2" ></p>
+        </div>
+      </div>
+      <div class="ezdan-about-coffee-card position-relative">
+        <div class="ezdan-about-coffee-card-icon">
+          <div id="prepearwayIconDisplay3" style="display: inline-block;"></div>
+        </div>
+        <div class="ezdan-about-coffee-card-content">
+          <h4 id="prepearwayTitleDisplay3"> </h4>
+          <p id="prepearwayDisinfoDisplay3" ></p>
+        </div>
+      </div>
+      <div class="ezdan-about-coffee-card position-relative">
+        <div class="ezdan-about-coffee-card-icon.w-35">
+          <div id="prepearwayIconDisplay4" style="display: inline-block;"></div>
+        </div>
+        <div class="ezdan-about-coffee-card-content">
+          <h4 id="prepearwayTitleDisplay4"> </h4>
+          <p id="prepearwayDisinfoDisplay4" ></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+
+
+
+<section id="Product-description">
+  <div class="ezdan-product-desc-wrapper">
+    <div class="container">
+      <div class="ezdan-product-desc-content">
+        <h2 id="storyTitDisplay"></h2>
+        <h4 id="storyInfoDisplay">
+        </h4>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
 
 
 
