--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -404,6 +404,58 @@
    
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
   
   
     <div id="product-container" data-product-id="{{ product.id }}">
@@ -482,21 +534,20 @@
 
 
 
-  <!-- Additional sections (replace "X" with appropriate numbers) -->
-  <section id="About-coffeeX" style="display: none;">
+  <section id="About-coffee" style="display: none;">
       <div>
-          <div id="aboutCoffeeIconDisplayX"></div>
-          <div id="aboutCoffeeTitleDisplayX"></div>
-          <div id="aboutCoffeeDisDisplayX"></div>
+          <div id="aboutCoffeeIconDisplay"></div>
+          <div id="aboutCoffeeTitleDisplay"></div>
+          <div id="aboutCoffeeDisDisplay"></div>
       </div>
   </section>
 
-  <section id="Product-descriptionX" style="display: none;">
+  <section id="Product-description" style="display: none;">
       <div class="ezdan-product-desc-wrapper">
           <div class="container">
               <div class="ezdan-product-desc-content">
-                  <h2 id="itemDisBlockTitleDisplayX"></h2>
-                  <h4 id="itemDisBlockDisplayX"></h4>
+                  <h2 id="itemDisBlockTitleDisplay"></h2>
+                  <h4 id="itemDisBlockDisplay"></h4>
               </div>
           </div>
       </div>
