--- a/src/views/components/header/header.twig
+++ b/src/views/components/header/header.twig
@@ -231,10 +231,13 @@
               <a href="https://arriyadhroaster.com/%D8%A7%D9%84%D8%AF%D9%88%D8%B1%D8%A7%D8%AA-%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%D9%8A%D8%A9/c137650432">الدورات التدريبية</a>
             </li>
             <li class="d-none d-xl-block">
-              <a href="#"><i class="sicon-search"></i></a>
+              <button style="color: #352110;" onclick="salla.event.dispatch('search::open')" class="search-btn">
+                <span class="sicon-search"></span>
+                <span class="sm:hidden px-2 opacity-50">{{ trans('blocks.header.searchProducts') }}</span>
+              </button>
             </li>
             <li>
-              <a href="#"><i class="sicon-cart2"></i>
+           
                 <salla-cart-summary class="ml-4 rtl:ml-[unset] rtl:mr-4">
                   <i slot="icon" class="header-btn__icon icon sicon-shopping-bag"></i>
                 </salla-cart-summary>
@@ -242,9 +245,18 @@
              
               </a>
             </li>
-            <li>
-              <a href="#"><i class="sicon-user"></i></a>
-            </li>
+            <li class="d-none d-xl-block">
+             
+              {% if user.type=='user' %}
+              <salla-user-menu avatar-only show-header></salla-user-menu>
+            {% else %}
+                <button class="header-btn" onclick="salla.event.dispatch('login::open')">
+                  <i style="color: #352110;" class="header-btn__icon sicon-user"></i>
+                </button>
+            {% endif %}
+              
+            </i></a>
+          </li>
           </ul>
         </div>
       </div>
