--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -616,18 +616,16 @@
 
 
 
-<section id="Product-description">
+<section id="Product-descriptionstory">
   <div class="ezdan-product-desc-wrapper">
     <div class="container">
       <div class="ezdan-product-desc-content">
         <h2 id="storyTitDisplay"></h2>
-        <h4 id="storyInfoDisplay">
-        </h4>
+        <h4 id="storyInfoDisplay"></h4>
       </div>
     </div>
   </div>
 </section>
-
 
 
 
