--- a/src/views/pages/product/single.twig
+++ b/src/views/pages/product/single.twig
@@ -616,7 +616,7 @@
 
 
 
-<section id="Product-descriptionstory">
+<section id="story-description">
   <div class="ezdan-product-desc-wrapper">
     <div class="container">
       <div class="ezdan-product-desc-content">
